--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 
   <body>
-    <p> Index beginning </p>
+    <p> Index begiddddnning </p>
     <div class="center-screen"> 
       <app-root></app-root>
     </div>
